# volcogui

./: .gitignore  BUILD.md  DEVELOPMENT.md  INSTALLATION.md  LESSONS_LEARNED.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  START_HERE.md  UI_GUIDE.md  VERIFICATION.md  VolcoGUI.spec  WELCOME.md  build.py  first_run.bat  first_run.sh  pyproject.toml  run.bat  run.sh  volco_llm_ref.md  volco_llm_ref_fea.md
volcogui/: __init__.py  main.py
volcogui/backend/: __init__.py  simulation_runner.py
volcogui/ui/: __init__.py  file_import_widget.py  main_window.py  parameter_widget.py  viewer_widget.py
